--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img src="images/in.png" alt=""> </a>
         </div>
         <div class="col-md-1 col-sm-3 col-xs-12 github-link">
-            <a class="hover-image" href="https://github.com/prashnthnayak" target="_blank"> <img src="images/git.png" alt=""> </a>
+            <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png" alt=""> </a>
         </div>
         <div class="col-md-1 col-sm-3 col-xs-12 mail-link">
             <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png" alt=""> </a>
