--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="jumbotron">
       <div class="row">
         <div class="col-md-6 col-sm-12 col-xs-12 profile-image-col">
-          <img src="images/Prashanth Nayak.png" alt="Profile image" width="150px" height="auto" class="img-profile img-circle">
+          <img src="images/Prashanth Nayak.jpeg" alt="Profile image" width="150px" height="auto" class="img-profile img-circle">
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12 profile-detail">
           <div class="name"><span>Prashanth Nayak</span></div>
