--- a/index.html
+++ b/index.html
@@ -1,56 +1,104 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Prashanth Nayak</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name=viewport content="width=device-width, initial-scale=1">
 
-    <!-- css link -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<head>
+  <title>Prashanth Nayak</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name=viewport content="width=device-width, initial-scale=1">
 
-    <!-- javascript links -->
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <div class="jumbotron">
+  <!-- css link -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+  <!-- javascript links -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+  <!-- <div class="jumbotron">
+    <div class="row">
+      <div class="col-sm-6 br">
+        <div class="row">
+          <div class="col-md-6 col-sm-12 col-xs-12 profile-image-col">
+            <img src="images/Prashanth Nayak.jpeg" alt="Profile image" width="150px" height="auto"
+              class="img-profile img-circle">
+          </div>
+          <div class="col-md-6 col-sm-12 col-xs-12 profile-detail">
+            <div class="name"><span>Prashanth Nayak</span></div>
+            <div class="interest"><span>Programmer</span></div>
+            <div class="designation"><span>MEAN stack developer</span></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-6">
+        <div class="getInTouch">Get In Touch</div>
+        <div class="row">
+          <div class="col-sm-3 col-xs-12 codepen-link">
+            <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank"> <img
+                src="images/codepen.png" alt=""> </a>
+          </div>
+          <div class="col-sm-3 col-xs-12 linkedin-link">
+            <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img
+                src="images/in.png" alt=""> </a>
+          </div>
+          <div class="col-sm-3 col-xs-12 github-link">
+            <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png"
+                alt=""> </a>
+          </div>
+          <div class="col-sm-3 col-xs-12 mail-link">
+            <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png"
+                alt=""> </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="profile-links">
+  <a class="hover-image" href=" https://codepen.io/prashanthnayak/"target="_blank" style="margin-right: 30px;"> <img src="images/codepen.png" alt=""> </a>
+      <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank" style="margin: 0px 15px;"> <img src="images/in.png" alt=""> </a>
+      <a class="hover-image" href="https://github.com/prashnthnayak" target="_blank" style="margin: 0px 15px;"> <img src="images/git.png" alt=""> </a>
+      <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target="" style="margin-left: 30px;"> <img src="images/mail.png" alt=""> </a>
+   </div>  -->
+
+
+  <div class="jumbotron">
+    <div>
       <div class="row">
         <div class="col-md-6 col-sm-12 col-xs-12 profile-image-col">
-          <img src="images/Prashanth Nayak.jpeg" alt="Profile image" width="150px" height="auto" class="img-profile img-circle">
+          <img src="images/Prashanth Nayak.jpeg" alt="Profile image" width="150px" height="auto"
+            class="img-profile img-circle">
         </div>
         <div class="col-md-6 col-sm-12 col-xs-12 profile-detail">
           <div class="name"><span>Prashanth Nayak</span></div>
-          <div class="interest"><span>Opensource enthusiast</span></div>
-          <div class="designation"><span>Programmer / MEAN stack developer</span></div>
+          <div class="interest"><span>Programmer</span></div>
+          <div class="designation"><span>MEAN stack developer</span></div>
         </div>
       </div>
-    </div><!-- jumbotron ends-->
-    <div class="profile-links">
-      <div class="getInTouch">Get In Touch</div>
-      <!-- <a class="hover-image" href=" https://codepen.io/prashanthnayak/"target="_blank" style="margin-right: 30px;"> <img src="images/codepen.png" alt=""> </a>
-      <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank" style="margin: 0px 15px;"> <img src="images/in.png" alt=""> </a>
-      <a class="hover-image" href="https://github.com/prashnthnayak" target="_blank" style="margin: 0px 15px;"> <img src="images/git.png" alt=""> </a>
-      <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target="" style="margin-left: 30px;"> <img src="images/mail.png" alt=""> </a> -->
-      <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-1 col-sm-3 col-xs-12 codepen-link">
-            <a class="hover-image" href=" https://codepen.io/prashanthnayak/"target="_blank"> <img src="images/codepen.png" alt=""> </a>
+      <div class="row mt-65">
+        <div class="col-sm-3 col-xs-12 codepen-link">
+          <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank"> <img
+              src="images/codepen.png" alt=""> </a>
         </div>
-        <div class="col-md-1 col-sm-3 col-xs-12 linkedin-link">
-            <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img src="images/in.png" alt=""> </a>
+        <div class="col-sm-3 col-xs-12 linkedin-link">
+          <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img
+              src="images/in.png" alt=""> </a>
         </div>
-        <div class="col-md-1 col-sm-3 col-xs-12 github-link">
-            <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png" alt=""> </a>
+        <div class="col-sm-3 col-xs-12 github-link">
+          <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png"
+              alt=""> </a>
         </div>
-        <div class="col-md-1 col-sm-3 col-xs-12 mail-link">
-            <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png" alt=""> </a>
+        <div class="col-sm-3 col-xs-12 mail-link">
+          <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png"
+              alt="">
+          </a>
         </div>
-        <div class="col-md-4"></div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
