--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
         </div>
       </div>
       <div class="row mt-65">
-        <div class="col-sm-3 col-xs-12 codepen-link">
+        <div class="col-sm-3 col-xs-6 text-center codepen-link">
           <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank"> <img
               src="images/codepen.png" alt=""> </a>
         </div>
-        <div class="col-sm-3 col-xs-12 linkedin-link">
+        <div class="col-sm-3 col-xs-6 text-center linkedin-link">
           <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img
               src="images/in.png" alt=""> </a>
         </div>
-        <div class="col-sm-3 col-xs-12 github-link">
+        <div class="col-sm-3 col-xs-6 text-center github-link">
           <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png"
               alt=""> </a>
         </div>
-        <div class="col-sm-3 col-xs-12 mail-link">
+        <div class="col-sm-3 col-xs-6 text-center mail-link">
           <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png"
               alt="">
           </a>
