added title and alternative for image

--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
       </div>
       <div class="row mt-65">
         <div class="col-sm-3 col-xs-6 text-center codepen-link">
-          <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank"> <img
-              src="images/codepen.png" alt=""> </a>
+          <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank" title="Codepen"> <img
+              src="images/codepen.png" alt="codepen"> </a>
         </div>
         <div class="col-sm-3 col-xs-6 text-center linkedin-link">
-          <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank"> <img
-              src="images/in.png" alt=""> </a>
+          <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank" title="Linkedin">
+            <img src="images/in.png" alt="linkedin"> </a>
         </div>
         <div class="col-sm-3 col-xs-6 text-center github-link">
-          <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank"> <img src="images/git.png"
-              alt=""> </a>
+          <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank" title="Github"> <img
+              src="images/git.png" alt="github"> </a>
         </div>
         <div class="col-sm-3 col-xs-6 text-center mail-link">
-          <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target=""> <img src="images/mail.png"
-              alt="">
+          <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target="_blank" title="Email"> <img
+              src="images/mail.png" alt="mail">
           </a>
         </div>
       </div>
