removed unwanted links and code

--- a/index.html
+++ b/index.html
@@ -9,13 +9,8 @@
 
   <!-- css link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-
-  <!-- javascript links -->
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -79,19 +74,19 @@
         </div>
       </div>
       <div class="row mt-65">
-        <div class="col-sm-3 col-xs-6 text-center codepen-link">
+        <div class="col-sm-3 col-xs-6 codepen-link">
           <a class="hover-image" href=" https://codepen.io/prashanthnayak/" target="_blank" title="Codepen"> <img
               src="images/codepen.png" alt="codepen"> </a>
         </div>
-        <div class="col-sm-3 col-xs-6 text-center linkedin-link">
+        <div class="col-sm-3 col-xs-6 linkedin-link">
           <a class="hover-image" href=" https://www.linkedin.com/in/prashanthanayak/" target="_blank" title="Linkedin">
             <img src="images/in.png" alt="linkedin"> </a>
         </div>
-        <div class="col-sm-3 col-xs-6 text-center github-link">
+        <div class="col-sm-3 col-xs-6 github-link">
           <a class="hover-image" href="https://github.com/prashanthanayak" target="_blank" title="Github"> <img
               src="images/git.png" alt="github"> </a>
         </div>
-        <div class="col-sm-3 col-xs-6 text-center mail-link">
+        <div class="col-sm-3 col-xs-6 mail-link">
           <a class="hover-image" href="mailto:pnayak541@gmail.com?subject=" target="_blank" title="Email"> <img
               src="images/mail.png" alt="mail">
           </a>
