title font changed

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-md-6 col-sm-12 col-xs-12 profile-detail">
           <div class="name"><span>Prashanth Nayak</span></div>
           <div class="interest"><span>Programmer</span></div>
-          <div class="designation"><span>MEAN stack developer</span></div>
+          <div class="designation"><span style="color: orange;">MEAN</span> Stack Developer</div>
         </div>
       </div>
       <div class="row mt-65">
